tests/errors/poisoning/undefined-type-annotation.fn
---
Description: Variable annotated with an undefined type
Expected: FN3000
---

type Program
{
    fn Main -> i32
    {
        var x: NonExistentType = 1
        return 0
    }
}
